<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="app_description">Create Small Habits for Big Changes</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="login_title">Welcome Back, Habit Hero!</string>
    <string name="button_back">Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_placeholder">Enter your email address</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="register_dont_have_an_account">Don’t have an account?</string>
    <string name="register_heading">Join the Habit Squad!</string>
    <string name="register_subheading">Your journey to better habits begins here</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="register_password_placeholder">Create a password</string>
    <string name="register_confirm_password_placeholder">Confirm your password</string>
    <string name="name_placeholder">Enter your full name</string>
    <string name="next_step">Next Step</string>
    <string name="terms_of_service_and_privacy_policy">Terms of Service and Privacy Policy</string>
    <string name="_1">1</string>
    <string name="form">Form</string>
    <string name="step_divider"><![CDATA[>]]></string>
    <string name="_2">2</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="_3">3</string>
    <string name="done">Done</string>
    <string name="i_have_read_and_agree_to_the_terms_of_service_and_privacy_policy">I have read and agree to the Terms of Service and Privacy Policy.</string>
    <string name="kickstart_your_habits">Kickstart Your Habits</string>
    <string name="registration_success">Registration Success</string>
    <string name="registration_success_caption_1">You’re In!</string>
    <string name="registration_success_caption_2">Welcome to the</string>
    <string name="registration_success_caption_3">Habit Squad!</string>
    <string name="registration_success_description">Your journey to better habits starts right now.</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log out</string>
    <string name="app_version">Habit Tracker v0.0.1</string>
    <string name="placeholder_email">johndoe@gmail.com</string>
    <string name="placeholder_name">John Doe</string>
    <string name="today">Today</string>
    <string name="today_placeholder">Wednesday, 16 February 2020</string>
    <string name="your_progress_today">Your Progress Today</string>
    <string name="your_progress_placeholder">1%</string>
    <string name="habits_to_do_today">Habits To Do Today</string>
    <string name="completed_habits_today">Completed Habits Today</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="time_placeholder">08:00</string>
    <string name="habit_placeholder">Have a breakfast</string>
    <string name="habit_list_heading">My Habit List</string>
    <string name="habit_list_description">Adjust your habit list to stay on track and make them work better for you</string>
    <string name="save_changes">Save Changes</string>
    <string name="add_new_habit">Add New Habit ....</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_habits">Change Habits</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem Ipsum Dolor Sit Amet</string>
    <string name="no_data_habit_1">Ready to build a new habit?</string>
    <string name="no_data_habit_2">Let’s add one and get going!</string>
    <string name="no_data_habit">No data habit</string>
    <string name="add_habit">Add Habit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="complete_the_habit">Complete the Habit</string>
    <string name="complete_the_habit_description">You\'re about to mark the habit as complete.</string>
    <string name="caution_this_action_cannot_be_undone">This action cannot be undone.</string>
    <string name="placeholder_note_no_self">Move your body, even if it’s just for 10 minutes to get your energy flowing.</string>
    <string name="edit_profile_title">Edit Your Profile</string>
    <string name="edit_profile_description">Let’s update your profile to make it even more awesome and up-to-date.</string>
    <string name="label_note_to_self">Note to Self</string>
    <string name="label_note_to_self_description">Write a quick note or reminder, like a goal, quote, or something to revisit later.</string>
    <string name="label_name_description">It doesn’t have to be your full or real name—choose what feels right!</string>
    <string name="note_to_self_placeholder">Reminder to myself</string>
    <string name="save_profile">Save Profile</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="select_profile_image_description">Pick a photo that represents you best</string>
    <string name="profile_image">Profile Image</string>
    <string name="step">Step</string>
    <string name="submit">Submit</string>
</resources>