<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="24dp"
    android:paddingVertical="32dp"
    tools:context=".AuthLoginActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/button_back"
        android:src="@drawable/ic_chevron_left" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_back"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login_title"
        android:textColor="@color/primary"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/et_email"
        style="@style/edit_text_primary"
        android:layout_below="@id/tv_login_title"
        android:layout_marginTop="28dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        style="@style/edit_text_primary"
        android:layout_below="@id/et_email"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/button_primary"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="32dp"
        android:text="@string/log_in" />

    <TextView
        style="@style/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/register_dont_have_an_account"
        android:textAlignment="center" />

</RelativeLayout>