<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="24dp"
    android:paddingVertical="32dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:contentDescription="@string/registration_success"
            android:id="@+id/iv_registration_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_registration_success" />

        <LinearLayout
            android:id="@+id/tv_register_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/text_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/registration_success_caption_1"
                android:textColor="@color/secondary" />

            <TextView
                style="@style/text_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/registration_success_caption_2"
                android:textColor="@color/secondary" />

            <TextView
                style="@style/text_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/registration_success_caption_3"
                android:textColor="@color/secondary" />
        </LinearLayout>

        <TextView
            style="@style/text_body_strong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_success_description" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_next_step"
        style="@style/button_primary"
        android:layout_alignParentBottom="true"
        android:text="@string/kickstart_your_habits" />

</RelativeLayout>