<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="20dp">

    <ImageView
        android:layout_marginTop="40dp"
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/button_back"
        android:src="@drawable/ic_chevron_left" />

    <TextView
        android:layout_marginTop="32dp"
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_back"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login_title"
        android:textColor="@color/primary"
        android:textSize="20pt" />

    <Button
        style="@style/button_primary"
        android:layout_below="@+id/tv_login_title"
        android:text="@string/log_in" />

</RelativeLayout>