<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_step_one"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <TextView
        android:id="@+id/tv_label_name"
        style="@style/text_label_strong"
        android:text="@string/label_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="-16dp"
        android:paddingEnd="0dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_name">

        <EditText
            style="@style/edit_text_primary"
            android:autofillHints="name"
            android:hint="@string/name_placeholder"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_label_email"
        style="@style/text_label_strong"
        android:layout_marginTop="24dp"
        android:text="@string/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="-16dp"
        android:paddingEnd="0dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_email">

        <EditText
            style="@style/edit_text_primary"
            android:autofillHints="emailAddress"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_label_password"
        style="@style/text_label_strong"
        android:layout_marginTop="24dp"
        android:text="@string/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="-16dp"
        android:paddingEnd="0dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_password">

        <EditText
            style="@style/edit_text_primary"
            android:autofillHints="password"
            android:hint="@string/register_password_placeholder"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_label_confirm_password"
        style="@style/text_label_strong"
        android:layout_marginTop="24dp"
        android:text="@string/label_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="-16dp"
        android:paddingEnd="0dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_confirm_password">

        <EditText
            style="@style/edit_text_primary"
            android:autofillHints="password"
            android:hint="@string/register_confirm_password_placeholder"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
