<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="8dp"
    android:paddingVertical="16dp">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_completeHabit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_heading"
                style="@style/text_sub_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete_the_habit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_habit_name"
                style="@style/text_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_heading" />


            <TextView
                android:id="@+id/tv_description"
                style="@style/text_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete_the_habit_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_habit_name" />

            <TextView
                android:id="@+id/tv_caution"
                style="@style/text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/caution_this_action_cannot_be_undone"
                android:textColor="@color/danger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_caution">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    style="@style/button_secondary"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnOk"
                    style="@style/button_primary"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/ok" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>